--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,22 @@ repositories {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.h2database:h2'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'junit'
+	}
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
+	testImplementation 'io.rest-assured:rest-assured:4.1.1'
+	testImplementation 'io.rest-assured:json-path:4.1.1'
+	testImplementation 'io.rest-assured:xml-path:4.1.1'
+	testImplementation 'io.rest-assured:json-schema-validator:4.1.1'
+
 	runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+	
+	compileOnly 'org.projectlombok:lombok:1.18.8'
+	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
