--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.google.code.gson:gson:2.8.5'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
 	implementation 'com.h2database:h2'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'junit'
 	}
