--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
 	implementation 'com.h2database:h2'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'junit'
