--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
-	implementation 'com.h2database:h2'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'mysql:mysql-connector-java'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'junit'
 	}
+	testImplementation 'com.h2database:h2'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testImplementation 'io.rest-assured:rest-assured:4.1.1'
 	testImplementation 'io.rest-assured:json-path:4.1.1'
