--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	testImplementation 'io.rest-assured:xml-path:4.1.1'
 	testImplementation 'io.rest-assured:json-schema-validator:4.1.1'
 	testImplementation 'io.rest-assured:spring-mock-mvc:4.1.1'
+	testImplementation 'org.powermock:powermock-module-junit4:2.0.4'
+	testImplementation 'org.powermock:powermock-api-mockito2:2.0.4'
 
 	runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
 	
