[#16] chore: Docker 환경을 세팅한다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,16 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
         format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3306/tecobrary?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-    username: luffy
-    password: 159456
+    url: jdbc:mysql://tecobrary-mysql:3306/tecobrary?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+    username: root
+    password: tecobrary
 
 server:
   port: 9090
