--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   api-server:
     image: tecobrary/tecobrary-api-server
+    container_name: api-server
     restart: always
     depends_on:
       - "mysql-db"
@@ -11,6 +12,7 @@ services:
       - 9090:9090
   mysql-db:
     image: mysql:8.0.17
+    container_name: mysql-db
     ports:
       - 6033:3306
     restart: always
