--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,4 +22,4 @@ services:
       MYSQL_DATABASE: tecobrary
     volumes:
       - ./db/mysql/init:/docker-entrypoint-initdb.d
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+      - ./cnf/my.cnf:/etc/mysql/my.cnf
