--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'mysql:mysql-connector-java'
-
+	implementation 'org.springframework.cloud:spring-cloud-config-server:2.2.0.RELEASE'
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'junit'
 	}
