--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: tecobraryapiv2
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
@@ -18,6 +20,11 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  cloud:
+    config:
+      server:
+        git:
+          uri: git@tecobrary:MrKwon/settings-tecobrary-api-v2.git
 
 server:
   port: 9090
