[#148] feat: Gradle 테스트 전후로 Elasticsearch를 도커로 실행시키고, 종료하는 기능을 추가한다.

--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,22 @@ ext {
     snippetsDir = file('build/generated-snippets')
 }
 
+task testElasticsearchRunner(type: Exec) {
+    workingDir '.'
+    commandLine './test-elasticsearch/run_test_elasticsearch.sh'
+}
+
 test {
     useJUnitPlatform()
     outputs.dir snippetsDir
+    dependsOn 'testElasticsearchRunner'
+    finalizedBy 'testElasticsearchKiller'
+}
+
+task testElasticsearchKiller(type: Exec) {
+    workingDir '.'
+    commandLine './test-elasticsearch/kill_test_elasticsearch.sh'
+    dependsOn 'test'
 }
 
 asciidoctor {
