--- a/build.gradle
+++ b/build.gradle
@@ -77,9 +77,78 @@ dependencies {
     implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.5.0'
 
     asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-	
+
     runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+}
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.asciidoctor.convert'
+
+    group = 'com.woowacourse'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '1.8'
+
+    ext {
+        snippetsDir = file('build/generated-snippets')
+    }
+
+    test {
+        useJUnitPlatform()
+        outputs.dir snippetsDir
+    }
+
+    asciidoctor {
+        inputs.dir snippetsDir
+        dependsOn test
+    }
+
+    bootJar {
+        dependsOn asciidoctor
+        from("${asciidoctor.outputDir}/html5") {
+            into 'static/docs'
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'com.google.code.gson:gson:2.8.5'
+        implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+        implementation 'io.jsonwebtoken:jjwt:0.9.1'
+        implementation 'mysql:mysql-connector-java'
+
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'junit'
+        }
+        testImplementation 'com.h2database:h2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testImplementation 'io.rest-assured:rest-assured:4.1.1'
+        testImplementation 'io.rest-assured:json-path:4.1.1'
+        testImplementation 'io.rest-assured:xml-path:4.1.1'
+        testImplementation 'io.rest-assured:json-schema-validator:4.1.1'
+        testImplementation 'io.rest-assured:spring-mock-mvc:4.1.1'
+        testImplementation 'org.powermock:powermock-module-junit4:2.0.4'
+        testImplementation 'org.powermock:powermock-api-mockito2:2.0.4'
+        testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+
+        asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+
+        runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
+
+        compileOnly 'org.projectlombok:lombok:1.18.8'
+        annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    }
 }
