[#152] fix: 발생하는 오류들을 수정한다

--- a/tecobrary-core-api/src/test/resources/application.yml
+++ b/tecobrary-core-api/src/test/resources/application.yml
@@ -14,3 +14,21 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+naver:
+  client_id: a
+  client_secret: a
+
+slackbot:
+  host: http://localhost:5000
+
+github:
+  user:
+    client_id: clientId
+    client_secret: clientSecret
+    redirect_uri: redirectUrl
+  api:
+    scope: scope
+
+jwt:
+  secret: test
