[#152] chore: tecobrary-external-service 모듈을 분리한다.
- core-api 에서 호출하는 외부 api 로 이루어진 모듈이다.

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ pluginManagement {
 rootProject.name = 'tecobrary'
 include 'tecobrary-domain'
 include 'tecobrary-core-api'
+include 'tecobrary-external-service'
 
