--- a/build.gradle
+++ b/build.gradle
@@ -6,25 +6,17 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.woowacourse'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-ext {
-    snippetsDir = file('build/generated-snippets')
-}
-
 task testElasticsearchRunner(type: Exec) {
     workingDir '.'
     commandLine './test-elasticsearch/run_test_elasticsearch.sh'
 }
 
-test {
-    useJUnitPlatform()
-    outputs.dir snippetsDir
-    dependsOn 'testElasticsearchRunner'
-    finalizedBy 'testElasticsearchKiller'
-}
+//test {
+//    useJUnitPlatform()
+//    outputs.dir snippetsDir
+//    dependsOn 'testElasticsearchRunner'
+//    finalizedBy 'testElasticsearchKiller'
+//}
 
 task testElasticsearchKiller(type: Exec) {
     workingDir '.'
@@ -32,57 +24,8 @@ task testElasticsearchKiller(type: Exec) {
     dependsOn 'test'
 }
 
-asciidoctor {
-    inputs.dir snippetsDir
-    dependsOn test
-}
-
-bootJar {
-    dependsOn asciidoctor
-    from("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
-    }
-}
-
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    implementation ':tecobrary-domain'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    implementation 'mysql:mysql-connector-java'
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'junit'
-    }
-    testImplementation 'com.h2database:h2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'io.rest-assured:rest-assured:4.1.1'
-    testImplementation 'io.rest-assured:json-path:4.1.1'
-    testImplementation 'io.rest-assured:xml-path:4.1.1'
-    testImplementation 'io.rest-assured:json-schema-validator:4.1.1'
-    testImplementation 'io.rest-assured:spring-mock-mvc:4.1.1'
-    testImplementation 'org.powermock:powermock-module-junit4:2.0.4'
-    testImplementation 'org.powermock:powermock-api-mockito2:2.0.4'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
-    implementation 'org.elasticsearch:elasticsearch:7.5.0'
-    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.5.0'
-    implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.5.0'
-
-    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-
-    runtimeOnly 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
-
-    compileOnly 'org.projectlombok:lombok:1.18.8'
-    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
 subprojects {
@@ -94,27 +37,6 @@ subprojects {
     group = 'com.woowacourse'
     version = '0.0.1-SNAPSHOT'
     sourceCompatibility = '1.8'
-
-    ext {
-        snippetsDir = file('build/generated-snippets')
-    }
-
-    test {
-        useJUnitPlatform()
-        outputs.dir snippetsDir
-    }
-
-    asciidoctor {
-        inputs.dir snippetsDir
-        dependsOn test
-    }
-
-    bootJar {
-        dependsOn asciidoctor
-        from("${asciidoctor.outputDir}/html5") {
-            into 'static/docs'
-        }
-    }
 
     repositories {
         mavenCentral()
