[#152] chore: build.gradle 수정

--- a/tecobrary-core-api/build.gradle
+++ b/tecobrary-core-api/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "org.asciidoctor.convert"
 
+sourceCompatibility = '1.8'
+
 ext {
     snippetsDir = file('build/generated-snippets')
 }
