[#155] style: 기존 domain 패키지 이름을 수정한다.

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ pluginManagement {
 	}
 }
 rootProject.name = 'tecobrary'
-include 'tecobrary-domain'
+include 'tecobrary-domain-leg'
 include 'tecobrary-core-api'
 include 'tecobrary-external-service'
 
