[#155] feat: 새로운 도메인 모듈을 생성한다.

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ rootProject.name = 'tecobrary'
 include 'tecobrary-domain-leg'
 include 'tecobrary-core-api'
 include 'tecobrary-external-service'
+include 'tecobrary-domain'
 
