[#155] feat: 새로운 core-api 모듈을 추가한다

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include 'tecobrary-domain-leg'
 include 'tecobrary-core-api-leg'
 include 'tecobrary-external-service'
 include 'tecobrary-domain'
+include 'tecobrary-core-api'
 
