[#156] feat: 어드민 어플리케이션 모듈 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'tecobrary-core-api-leg'
 include 'tecobrary-external-service'
 include 'tecobrary-domain'
 include 'tecobrary-core-api'
+include 'tecobrary-admin'
 
