[#156] feat: 커밋에 누락된 내용을 추가한다

--- a/tecobrary-admin/build.gradle
+++ b/tecobrary-admin/build.gradle
@@ -26,4 +26,5 @@ bootJar {
 
 dependencies {
     implementation project(':tecobrary-domain')
+    implementation project(':tecobrary-external-service')
 }
