--- a/tecobrary-admin/src/front/package.json
+++ b/tecobrary-admin/src/front/package.json
@@ -8,7 +8,7 @@
     "build": "npm install && vue-cli-service build --no-clean"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.19.2",
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "driver.js": "0.9.5",
@@ -24,7 +24,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
-    "showdown": "1.9.0",
+    "showdown": "^1.9.1",
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
@@ -55,7 +55,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "plop": "2.3.0",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
