[#160] chore: 스크립트를 수정한다.

--- a/tecobrary-admin/src/front/package.json
+++ b/tecobrary-admin/src/front/package.json
@@ -5,7 +5,7 @@
   "author": "thedevluffy <thedevluffy@gmail.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "npm install && vue-cli-service build --no-clean"
+    "build": "vue-cli-service build --no-clean"
   },
   "dependencies": {
     "axios": "^0.19.2",
