[#164]chore : application.yml 을 수정한다.

--- a/tecobrary-admin/src/main/resources/application.yml
+++ b/tecobrary-admin/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  main:
+    allow-bean-definition-overriding: true
   security:
     oauth2:
       client:
