[#171] chore - 의존성을 추가한다.

--- a/build.gradle
+++ b/build.gradle
@@ -76,5 +76,6 @@ subprojects {
 
         compileOnly 'org.projectlombok:lombok:1.18.8'
         annotationProcessor 'org.projectlombok:lombok:1.18.8'
+        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     }
 }
