[#171] feat: auth 관련 controller 를 구현한다.

--- a/tecobrary-core-api/build.gradle
+++ b/tecobrary-core-api/build.gradle
@@ -27,6 +27,8 @@ bootJar {
 dependencies {
     implementation project(':tecobrary-domain')
     implementation project(':tecobrary-external-service')
+
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 task copyEnv(type: Copy) {
